--- a/CVPR_2016_Tutorial.htm
+++ b/CVPR_2016_Tutorial.htm
@@ -1,4 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
+ï»¿<html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
@@ -42,7 +42,7 @@ href="CVPR_2016_Tutorial.files/colorschememapping.xml">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -353,7 +353,7 @@ href="CVPR_2016_Tutorial.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:0 268435456 0 0 -2147483648 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -361,7 +361,7 @@ href="CVPR_2016_Tutorial.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -376,7 +376,7 @@ href="CVPR_2016_Tutorial.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1073786111 1 0 415 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -397,7 +397,7 @@ href="CVPR_2016_Tutorial.files/colorschememapping.xml">
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -407,7 +407,7 @@ href="CVPR_2016_Tutorial.files/colorschememapping.xml">
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"Ò³Ã¼ Char";
+	mso-style-link:"é¡µçœ‰ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:center;
@@ -422,7 +422,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -432,7 +432,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"Ò³½Å Char";
+	mso-style-link:"é¡µè„š Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:none;
@@ -442,7 +442,7 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -471,15 +471,15 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	text-indent:21.0pt;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
-	font-family:ËÎÌå;
-	mso-bidi-font-family:ËÎÌå;}
+	font-family:å®‹ä½“;
+	mso-bidi-font-family:å®‹ä½“;}
 span.Char
-	{mso-style-name:"Ò³Ã¼ Char";
+	{mso-style-name:"é¡µçœ‰ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:Ò³Ã¼;
+	mso-style-link:é¡µçœ‰;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
 	font-family:"Calibri","sans-serif";
@@ -489,12 +489,12 @@ span.Char
 	mso-hansi-theme-font:minor-latin;
 	mso-font-kerning:1.0pt;}
 span.Char0
-	{mso-style-name:"Ò³½Å Char";
+	{mso-style-name:"é¡µè„š Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:Ò³½Å;
+	mso-style-link:é¡µè„š;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
 	font-family:"Calibri","sans-serif";
@@ -1118,7 +1118,7 @@ ul
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -1182,15 +1182,15 @@ June 26, 2016<o:p></o:p></span></b></p>
 
 <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=EN-US>Schedule:<o:p></o:p></span></b></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 08:30-08:45 <a
 href="CVPR16-Tutorial-Subspace-Clustering-Introduction-Rene.pdf"><span
 class=GramE>Introduction</span> to Subspace Clustering</a><o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 08:45-10:00 Sparse Subspace Clustering</span></p>
 
@@ -1202,7 +1202,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>a)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'><a
 href="Elhamifar_presentation_cvpr15.pdf">Modeling for High-Dimensional Data
@@ -1216,19 +1216,19 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>b)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'><a
 href="CVPR16-Tutorial-Subspace-Clustering-Scalable-SSC-Rene.pdf">Scalable
 Sparse Subspace Clustering</a><o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 10:00-10:30 Coffee <span class=GramE>Break</span><o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 10:30-12:00 <a href="Low-Rank%20Subspace%20Clustering_Lin&amp;Feng.pdf">Low
 Rank Subspace Clustering</a></span></p>
@@ -1241,7 +1241,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>a)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Representative Models<o:p></o:p></span></p>
 
@@ -1253,7 +1253,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>b)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Analysis on LRR<o:p></o:p></span></p>
 
@@ -1265,7 +1265,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>c)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Applications<o:p></o:p></span></p>
 
@@ -1277,18 +1277,18 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>d)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Block-Diagonal Structure
 in Subspace Clustering<o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 12:00-02:00 Lunch Break<o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 02:00-03:30 <a href="Algorithms%20&amp;%20More%20Models_Li&amp;Fu.pdf">Algorithms
 &amp; More Models</a></span></p>
@@ -1301,7 +1301,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>a)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Optimization and
 Analysis<o:p></o:p></span></p>
@@ -1314,7 +1314,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>b)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Scalable Algorithms<o:p></o:p></span></p>
 
@@ -1326,17 +1326,17 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>c)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>More Models<o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 03:30-04:00 Coffee <span class=GramE>Break</span><o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå;mso-ascii-font-family:Calibri;
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+<p class=MsoNormal><span style='font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin'>&#8226;</span><span
 lang=EN-US> 04:00-04:45 <a href="Applications%20&amp;%20Conclusions_Li&amp;Fu.pdf">Applications
 &amp; Conclusions</a></span></p>
@@ -1349,7 +1349,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>a)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Applications<o:p></o:p></span></p>
 
@@ -1361,7 +1361,7 @@ minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-font-kerning:1.0pt'><span style='mso-list:
 Ignore'>b)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]><span
 lang=EN-US style='font-size:10.5pt;mso-bidi-font-size:11.0pt;font-family:"Calibri","sans-serif";
-mso-ascii-theme-font:minor-latin;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
+mso-ascii-theme-font:minor-latin;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
 minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";
 mso-bidi-theme-font:minor-bidi;mso-font-kerning:1.0pt'>Conclusions<o:p></o:p></span></p>
 
