--- a/How to Write Good Responses to Reviews of Journal Papers.htm
+++ b/How to Write Good Responses to Reviews of Journal Papers.htm
@@ -1,4 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
+Ôªø<html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
@@ -43,7 +43,7 @@ href="How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 ∞ı</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 Á£Ö</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -346,7 +346,7 @@ href="How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ÀŒÃÂ;
+	{font-family:ÂÆã‰Ωì;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -354,7 +354,7 @@ href="How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ÀŒÃÂ;
+	{font-family:ÂÆã‰Ωì;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -369,7 +369,7 @@ href="How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1073786111 1 0 415 0;}
 @font-face
-	{font-family:"\@ÀŒÃÂ";
+	{font-family:"\@ÂÆã‰Ωì";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -390,7 +390,7 @@ href="How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ÀŒÃÂ;
+	mso-fareast-font-family:ÂÆã‰Ωì;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -399,7 +399,7 @@ href="How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers
 	mso-font-kerning:1.0pt;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-priority:99;
-	mso-style-link:"“≥√º Char";
+	mso-style-link:"È°µÁúâ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:center;
@@ -414,7 +414,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ÀŒÃÂ;
+	mso-fareast-font-family:ÂÆã‰Ωì;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -423,7 +423,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	mso-font-kerning:1.0pt;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-priority:99;
-	mso-style-link:"“≥Ω≈ Char";
+	mso-style-link:"È°µËÑö Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:none;
@@ -433,7 +433,7 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ÀŒÃÂ;
+	mso-fareast-font-family:ÂÆã‰Ωì;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -456,7 +456,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ÀŒÃÂ;
+	mso-fareast-font-family:ÂÆã‰Ωì;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -464,19 +464,19 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	mso-bidi-theme-font:minor-bidi;
 	mso-font-kerning:1.0pt;}
 span.Char
-	{mso-style-name:"“≥√º Char";
+	{mso-style-name:"È°µÁúâ Char";
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:“≥√º;
+	mso-style-link:È°µÁúâ;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;}
 span.Char0
-	{mso-style-name:"“≥Ω≈ Char";
+	{mso-style-name:"È°µËÑö Char";
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:“≥Ω≈;
+	mso-style-link:È°µËÑö;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;}
 .MsoChpDefault
@@ -571,7 +571,7 @@ ul
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:∆’Õ®±Ì∏Ò;
+	{mso-style-name:ÊôÆÈÄöË°®Ê†º;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -607,8 +607,8 @@ to Write Good Responses to Reviews of Journal Papers</span></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoNormal><span lang=EN-US>The rule of thumb is to save reviewers°Ø and
-editor°Øs time. Ideally, you should provide sufficient details and arguments so
+<p class=MsoNormal><span lang=EN-US>The rule of thumb is to save reviewers‚Äô and
+editor‚Äôs time. Ideally, you should provide sufficient details and arguments so
 that they can make decision based on your replies ONLY, rather than referring
 to your original and revised manuscripts.</span></p>
 
@@ -637,9 +637,9 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>Give details of the revision
-and the location of modifications, such as °∞We revise at the third line, second
-paragraph of Section 2, as follows °≠°± rather than simply writing °∞We have
-revised according to the comment/suggestion.°±</span></p>
+and the location of modifications, such as ‚ÄúWe revise at the third line, second
+paragraph of Section 2, as follows ‚Ä¶‚Äù rather than simply writing ‚ÄúWe have
+revised according to the comment/suggestion.‚Äù</span></p>
 
 <p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt;
 mso-char-indent-count:0;mso-list:l0 level1 lfo1'><![if !supportLists]><span
