--- a/Optimal CFA Design.htm
+++ b/Optimal CFA Design.htm
@@ -1,4 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
+ï»¿<html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
@@ -41,7 +41,7 @@ href="Optimal%20CFA%20Design.files/colorschememapping.xml">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -344,7 +344,7 @@ href="Optimal%20CFA%20Design.files/colorschememapping.xml">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -352,7 +352,7 @@ href="Optimal%20CFA%20Design.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -367,7 +367,7 @@ href="Optimal%20CFA%20Design.files/colorschememapping.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1073786111 1 0 415 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -388,7 +388,7 @@ href="Optimal%20CFA%20Design.files/colorschememapping.xml">
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -420,7 +420,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
