--- a/Academic.htm
+++ b/Academic.htm
@@ -1,4 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
+ï»¿<html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
@@ -39,7 +39,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
   <w:TrackMoves/>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -342,7 +342,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -350,7 +350,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -365,7 +365,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1073786111 1 0 415 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -383,8 +383,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:ËÎÌå;
-	mso-bidi-font-family:ËÎÌå;}
+	mso-fareast-font-family:å®‹ä½“;
+	mso-bidi-font-family:å®‹ä½“;}
 a:link, span.MsoHyperlink
 	{mso-style-priority:99;
 	color:blue;
@@ -400,27 +400,27 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"´¿ÎÄ±¾ Char";
+	mso-style-link:"çº¯æ–‡æœ¬ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:ËÎÌå;
-	mso-bidi-font-family:ËÎÌå;}
+	mso-fareast-font-family:å®‹ä½“;
+	mso-bidi-font-family:å®‹ä½“;}
 span.Char
-	{mso-style-name:"´¿ÎÄ±¾ Char";
+	{mso-style-name:"çº¯æ–‡æœ¬ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:´¿ÎÄ±¾;
+	mso-style-link:çº¯æ–‡æœ¬;
 	mso-bidi-font-size:10.5pt;
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-hansi-font-family:Calibri;
-	mso-bidi-font-family:ËÎÌå;
+	mso-bidi-font-family:å®‹ä½“;
 	mso-font-kerning:0pt;}
 span.GramE
 	{mso-style-name:"";
@@ -450,7 +450,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -492,7 +492,7 @@ lang=EN-US style='font-size:14.0pt'>I am seeking applications from qualified
 candidates for post-doctoral research. The target research areas are machine
 intelligence and other related areas which require theoretical analysis (including
 but not limited to machine learning, optimization, numerical algebra, signal
-processing, etc.). The candidates should get their <span class=GramE>Ph.d.¡¯s</span>
+processing, etc.). The candidates should get their <span class=GramE>Ph.d.â€™s</span>
 within five years and under 35 when applying. The annual payment will be around
 30K USD. Those exceptional will be recommended to the </span><span lang=EN-US><a
 href="http://postdocs.pku.edu.cn/tzgg/62260.htm"><span style='font-size:14.0pt'>Boya
