--- a/Check List before Handing in Your Paper.htm
+++ b/Check List before Handing in Your Paper.htm
@@ -1,4 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
+ï»¿<html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
@@ -43,7 +43,7 @@ href="Check%20List%20before%20Handing%20in%20Your%20Paper.files/colorschememappi
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -346,7 +346,7 @@ href="Check%20List%20before%20Handing%20in%20Your%20Paper.files/colorschememappi
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -354,7 +354,7 @@ href="Check%20List%20before%20Handing%20in%20Your%20Paper.files/colorschememappi
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -369,7 +369,7 @@ href="Check%20List%20before%20Handing%20in%20Your%20Paper.files/colorschememappi
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1073786111 1 0 415 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -390,7 +390,7 @@ href="Check%20List%20before%20Handing%20in%20Your%20Paper.files/colorschememappi
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -399,7 +399,7 @@ href="Check%20List%20before%20Handing%20in%20Your%20Paper.files/colorschememappi
 	mso-font-kerning:1.0pt;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-priority:99;
-	mso-style-link:"Ò³Ã¼ Char";
+	mso-style-link:"é¡µçœ‰ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:center;
@@ -414,7 +414,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -423,7 +423,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	mso-font-kerning:1.0pt;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-priority:99;
-	mso-style-link:"Ò³½Å Char";
+	mso-style-link:"é¡µè„š Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:none;
@@ -433,7 +433,7 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -471,7 +471,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -497,7 +497,7 @@ p.MsoListParagraphCxSpFirst, li.MsoListParagraphCxSpFirst, div.MsoListParagraphC
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -523,7 +523,7 @@ p.MsoListParagraphCxSpMiddle, li.MsoListParagraphCxSpMiddle, div.MsoListParagrap
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -549,7 +549,7 @@ p.MsoListParagraphCxSpLast, li.MsoListParagraphCxSpLast, div.MsoListParagraphCxS
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -557,19 +557,19 @@ p.MsoListParagraphCxSpLast, li.MsoListParagraphCxSpLast, div.MsoListParagraphCxS
 	mso-bidi-theme-font:minor-bidi;
 	mso-font-kerning:1.0pt;}
 span.Char
-	{mso-style-name:"Ò³Ã¼ Char";
+	{mso-style-name:"é¡µçœ‰ Char";
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:Ò³Ã¼;
+	mso-style-link:é¡µçœ‰;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;}
 span.Char0
-	{mso-style-name:"Ò³½Å Char";
+	{mso-style-name:"é¡µè„š Char";
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:Ò³½Å;
+	mso-style-link:é¡µè„š;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;}
 span.SpellE
@@ -658,7 +658,7 @@ ul
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -737,8 +737,8 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>When using an acronym, give its
-full name when it first appears (except in title), e.g., ¡°Principal Component
-Analysis (PCA).¡±</span></p>
+full name when it first appears (except in title), e.g., â€œPrincipal Component
+Analysis (PCA).â€</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
@@ -752,11 +752,11 @@ auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Make clear the usage of ¡°<span
-style='color:red'>the</span>¡± and ¡°<span style='color:red'>a</span>¡±. Some of
+</span></span></span><![endif]><span lang=EN-US>Make clear the usage of â€œ<span
+style='color:red'>the</span>â€ and â€œ<span style='color:red'>a</span>â€. Some of
 them are subtle. But most of the cases, their usages are clear. In particular,
-use ¡°<span class=GramE><span style='color:red'>an</span></span>¡± before a word or
-a math entity whose pronunciation leads with a vowel, such as ¡°L^1-norm¡± and
+use â€œ<span class=GramE><span style='color:red'>an</span></span>â€ before a word or
+a math entity whose pronunciation leads with a vowel, such as â€œL^1-normâ€ and
 $h\times h$. Check <a href="http://alt-usage-english.org/">http://alt-usage-english.org/</a>
 </span></p>
 
@@ -766,8 +766,8 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>If there are only two objects,
-A and B, write ¡°A <span style='color:red'>and </span>B¡±. Do not write ¡°A<span
-style='color:red'>,</span> B¡±.</span></p>
+A and B, write â€œA <span style='color:red'>and </span>Bâ€. Do not write â€œA<span
+style='color:red'>,</span> Bâ€.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
@@ -775,9 +775,9 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>If there are more than two
-objects, A, B<span class=GramE>, ¡­,</span> Y, and Z, normally you can write
-both ¡°A, B, ¡­, Y<span style='color:red'>, and</span> Z¡± and ¡°A, B, ¡­, Y <span
-style='color:red'>and </span>Z¡±. However, the former is recommended in <a
+objects, A, B<span class=GramE>, â€¦,</span> Y, and Z, normally you can write
+both â€œA, B, â€¦, Y<span style='color:red'>, and</span> Zâ€ and â€œA, B, â€¦, Y <span
+style='color:red'>and </span>Zâ€. However, the former is recommended in <a
 href="http://alt-usage-english.org/">http://alt-usage-english.org/</a>. Anyway,
 this should be consistent throughout the paper.</span></p>
 
@@ -786,36 +786,36 @@ auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>10.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Do not write ¡°A, B, <span
-style='color:red'>and </span>C, etc.¡± Write ¡°A, B, C, etc.¡± instead.</span></p>
+</span></span></span><![endif]><span lang=EN-US>Do not write â€œA, B, <span
+style='color:red'>and </span>C, etc.â€ Write â€œA, B, C, etc.â€ instead.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>11.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Do not write ¡°isn¡¯t¡±, ¡°aren¡¯t¡±,
-¡°don¡¯t¡±, ¡°doesn¡¯t¡±, etc. Those are for spoken communication. Write ¡°<span
-style='color:red'>is not</span>¡±, ¡°<span style='color:red'>are not</span>¡±, ¡°<span
-style='color:red'>do not</span>¡±, ¡°<span class=GramE><span style='color:red'>does</span></span><span
-style='color:red'> not</span>¡±, etc., instead.</span></p>
+</span></span></span><![endif]><span lang=EN-US>Do not write â€œisnâ€™tâ€, â€œarenâ€™tâ€,
+â€œdonâ€™tâ€, â€œdoesnâ€™tâ€, etc. Those are for spoken communication. Write â€œ<span
+style='color:red'>is not</span>â€, â€œ<span style='color:red'>are not</span>â€, â€œ<span
+style='color:red'>do not</span>â€, â€œ<span class=GramE><span style='color:red'>does</span></span><span
+style='color:red'> not</span>â€, etc., instead.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>12.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Do not write ¡°<span
-class=SpellE><span style='color:red'>can not</span></span>¡±. Write ¡°<span
-style='color:red'>cannot</span>¡± instead.</span></p>
+</span></span></span><![endif]><span lang=EN-US>Do not write â€œ<span
+class=SpellE><span style='color:red'>can not</span></span>â€. Write â€œ<span
+style='color:red'>cannot</span>â€ instead.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>13.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Notice the correct dots in ¡°e.g.¡±,
-¡°etc.¡±, ¡°et al.¡±, etc.</span></p>
+</span></span></span><![endif]><span lang=EN-US>Notice the correct dots in â€œe.g.â€,
+â€œetc.â€, â€œet al.â€, etc.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
@@ -823,7 +823,7 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>14.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>Put a comma before
-¡°respectively¡±.</span></p>
+â€œrespectivelyâ€.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
@@ -839,8 +839,8 @@ text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>16.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>Use ¡°<span style='color:red'>``</span>¡±
-and ¡°<span style='color:red'>`</span>¡± in the .<span class=SpellE>tex</span>
+</span></span></span><![endif]><span lang=EN-US>Use â€œ<span style='color:red'>``</span>â€
+and â€œ<span style='color:red'>`</span>â€ in the .<span class=SpellE>tex</span>
 file for the left quotation mark.</span></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
@@ -875,11 +875,11 @@ auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-latin;
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>18.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]><span lang=EN-US>For inner product, use ¡°<span
-style='color:red'>\<span class=SpellE>langle</span></span>¡± and <span
-style='color:black;mso-themecolor:text1'>¡°</span><span style='color:red'>\<span
-class=SpellE>rangle</span></span>¡± instead of ¡°&lt;¡± and ¡°&gt;¡±. For norms, use
-¡°\|¡± instead of ¡°||¡±. </span></p>
+</span></span></span><![endif]><span lang=EN-US>For inner product, use â€œ<span
+style='color:red'>\<span class=SpellE>langle</span></span>â€ and <span
+style='color:black;mso-themecolor:text1'>â€œ</span><span style='color:red'>\<span
+class=SpellE>rangle</span></span>â€ instead of â€œ&lt;â€ and â€œ&gt;â€. For norms, use
+â€œ\|â€ instead of â€œ||â€. </span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
@@ -896,8 +896,8 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>20.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>If there are delimiters in a
-math expression, use ¡°<span style='color:red'>\left</span>¡± and ¡°<span
-style='color:red'>\right</span>¡± so that they can scale with the height of the
+math expression, use â€œ<span style='color:red'>\left</span>â€ and â€œ<span
+style='color:red'>\right</span>â€ so that they can scale with the height of the
 math expression.</span></p>
 
 <p class=MsoListParagraphCxSpLast style='margin-left:21.3pt;mso-add-space:auto;
@@ -938,8 +938,8 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>24.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>If you generate a figure by <span
-class=SpellE>Matlab</span>, use ¡°<span style='color:red'>print ¨C<span
-class=SpellE>dpsc</span> <span class=SpellE>XXXX.eps</span></span>¡± to save the
+class=SpellE>Matlab</span>, use â€œ<span style='color:red'>print â€“<span
+class=SpellE>dpsc</span> <span class=SpellE>XXXX.eps</span></span>â€ to save the
 figure into EPS. This ensures high visual quality of the figure.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
@@ -948,8 +948,8 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>25.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>Do not merge multiple
-figures/images in a single image. Label each sub-figure/image with ¡°(a)¡±, ¡°(b)¡±,
-¡°(c)¡±, etc., for easy reference.</span></p>
+figures/images in a single image. Label each sub-figure/image with â€œ(a)â€, â€œ(b)â€,
+â€œ(c)â€, etc., for easy reference.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:21.3pt;mso-add-space:
 auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
@@ -974,10 +974,10 @@ lang=EN-US style='mso-fareast-font-family:Calibri;mso-fareast-theme-font:minor-l
 mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>28.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>If you refer to multiple
-figures or tables simultaneously, write ¡°<span style='color:red'>Figures A and
-B</span>¡± or ¡°<span style='color:red'>Tables A and B</span>¡±, rather than ¡°<span
-style='color:red'>Figure A and Figure B</span>¡± or ¡°<span style='color:red'>Table
-A and Table B</span>.¡±</span></p>
+figures or tables simultaneously, write â€œ<span style='color:red'>Figures A and
+B</span>â€ or â€œ<span style='color:red'>Tables A and B</span>â€, rather than â€œ<span
+style='color:red'>Figure A and Figure B</span>â€ or â€œ<span style='color:red'>Table
+A and Table B</span>.â€</span></p>
 
 <p class=MsoNormal style='margin-left:3.3pt'><b style='mso-bidi-font-weight:
 normal'><span lang=EN-US><o:p>&nbsp;</o:p></span></b></p>
@@ -1008,7 +1008,7 @@ mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>31.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span lang=EN-US>Make the style of references
 consistent. Achieve this by compiling your .BIB file in a consistent style. Some
-first letters of human names or technical acronyms, such as ¡°PSNR¡± and ¡°Laplacian¡±,
+first letters of human names or technical acronyms, such as â€œPSNRâ€ and â€œLaplacianâ€,
 should always be capitalized in whatever <span class=SpellE>bibstyle</span>. Achieve
 this by adding parenthesis to the capitalized letters in the .BIB file.</span></p>
 
