--- a/zlin.htm
+++ b/zlin.htm
@@ -5089,13 +5089,7 @@ style='font-family:"Verdana","sans-serif"'><hr size=3 width="100%" align=center>
 last updated on Sept. 25, 2019. Number of visitors since March 1, 2010:
     <o:p></o:p></span></p>
 
-<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US><a
-href="http://www.amazingcounter.com/"><span style='mso-no-proof:yes;text-decoration:
-none;text-underline:none'><img border=0 width=80 height=21 id="_x0000_i1027"
-src="http://cb.amazingcounters.com/counter.php?i=2780394&amp;c=8341495"
-alt="说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: Description: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: count website visits"></span></a><br>
-<a href="http://www.1-coupons.com">Buckle</a> <a
-href="http://www.1-coupons.com/coupons/buckle.htm">Clothes</a><o:p></o:p></span></p>
+<div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3243847&c=9731854" alt="AmazingCounters.com"></a></div>
 
 <form id=default runat=server>
 </form>
