--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+﻿﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- saved from url=(0040)https://zhouchenlin.github.io/index.html -->
 <HTML xmlns:dir="http://schemas.microsoft.com/sharepoint/soap/directory/" 
 xmlns="http://www.w3.org/TR/REC-html40" xmlns:m="http://schemas.microsoft.com/office/2004/12/omml" 
@@ -5467,10 +5467,9 @@ style='font-family: "Verdana","sans-serif";'>
 was last updated on Jan. 13, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></SPAN></P>
 <P align="center" class="MsoNormal" style="text-align: center;"><SPAN lang="EN-US"><A 
-href="http://www.amazingcounter.com/"><SPAN style="text-decoration: none; text-underline: none; mso-no-proof: yes;"><IMG 
-width="80" height="21" id="_x0000_i1027" alt="说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: Description: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: 说明: count website visits" 
-src="" border="0"></SPAN></A><BR><A href="http://www.1-coupons.com/">Buckle</A> 
-<A 
-href="http://www.1-coupons.com/coupons/buckle.htm">Clothes</A><o:p></o:p></SPAN></P>
+<a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?zlin_counter"
+border="0" alt="Web Counters"></a>
+<br><a href="https://www.easycounter.com/">Web Site Hit Counters</a>
 <FORM id="default" 
 runat="server"></FORM></DIV></o:shapedefaults></msr:headertags></BODY></HTML>
