--- a/index.html
+++ b/index.html
@@ -2558,40 +2558,13 @@ border="0" cellspacing="0" cellpadding="0">
   <TBODY>
   <TR style="mso-yfti-irow: 0; mso-yfti-firstrow: yes;">
     <TD width="121" valign="top" style="padding: 0cm 5.4pt; width: 90.8pt;">
-      <P align="center" style="text-align: center;"><SPAN lang="EN-US" style='font-family: "Verdana","sans-serif"; mso-no-proof: yes;'><!--[if gte vml 1]><v:shapetype
-   id="_x0000_t75" coordsize="21600,21600" o:spt="75" o:preferrelative="t"
-   path="m@4@5l@4@11@9@11@9@5xe" filled="f" stroked="f">
-   <v:stroke joinstyle="miter"/>
-   <v:formulas>
-    <v:f eqn="if lineDrawn pixelLineWidth 0"/>
-    <v:f eqn="sum @0 1 0"/>
-    <v:f eqn="sum 0 0 @1"/>
-    <v:f eqn="prod @2 1 2"/>
-    <v:f eqn="prod @3 21600 pixelWidth"/>
-    <v:f eqn="prod @3 21600 pixelHeight"/>
-    <v:f eqn="sum @0 0 1"/>
-    <v:f eqn="prod @6 1 2"/>
-    <v:f eqn="prod @7 21600 pixelWidth"/>
-    <v:f eqn="sum @8 21600 0"/>
-    <v:f eqn="prod @7 21600 pixelHeight"/>
-    <v:f eqn="sum @10 21600 0"/>
-   </v:formulas>
-   <v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect"/>
-   <o:lock v:ext="edit" aspectratio="t"/>
-  </v:shapetype><v:shape id="图片_x0020_2" o:spid="_x0000_i1029" type="#_x0000_t75"
-   style='width:79.5pt;height:106.5pt;visibility:visible;mso-wrap-style:square'>
-   <v:imagedata src="zlin.files/image001.jpg" o:title=""/>
-  </v:shape><![endif]--><!--[if !vml]--><IMG 
-      width="106" height="142" src="index_files/image002.jpg" v:shapes="图片_x0020_2"><!--[endif]--></SPAN><SPAN 
+      <P align="center" style="text-align: center;"><SPAN lang="EN-US" style='font-family: "Verdana","sans-serif"; mso-no-proof: yes;'><IMG 
+      width="106" height="142" src="index_files/image001.jpg" v:shapes="图片_x0020_2"></SPAN><SPAN 
       lang="EN-US" 
       style='font-family: "Verdana","sans-serif";'><o:p></o:p></SPAN></P></TD>
     <TD width="115" valign="top" style="padding: 0cm 5.4pt; width: 86.4pt;">
-      <P align="center" style="text-align: center;"><SPAN lang="EN-US" style='font-family: "Verdana","sans-serif"; mso-no-proof: yes;'><!--[if gte vml 1]><v:shape id="图片_x0020_1"
-   o:spid="_x0000_i1028" type="#_x0000_t75" style='width:78.75pt;height:106.5pt;
-   visibility:visible;mso-wrap-style:square'>
-   <v:imagedata src="zlin.files/image003.jpg" o:title=""/>
-  </v:shape><![endif]--><!--[if !vml]--><IMG 
-      width="105" height="142" src="index_files/image004.jpg" v:shapes="图片_x0020_1"><!--[endif]--></SPAN><SPAN 
+      <P align="center" style="text-align: center;"><SPAN lang="EN-US" style='font-family: "Verdana","sans-serif"; mso-no-proof: yes;'><IMG 
+      width="105" height="142" src="index_files/image003.jpg" v:shapes="图片_x0020_1"></SPAN><SPAN 
       lang="EN-US" 
       style='font-family: "Verdana","sans-serif";'><o:p></o:p></SPAN></P></TD></TR>
   <TR style="mso-yfti-irow: 1; mso-yfti-lastrow: yes;">
