--- a/index.html
+++ b/index.html
@@ -2587,10 +2587,10 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
 <p>&nbsp;</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">News:</span></u></b><b style="mso-bidi-font-weight: normal;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> 
   <o:p></o:p> </span></b></p>
-<table width="1180" height="512" border="1">
+<table width="786" height="519" border="1">
   <tbody>
   <tr>
-    <td width="995" height="84" align="left">
+    <td width="606" height="91" align="left">
       <p class="WordSection1">1. <a href="https://zhouchenlin.github.io/Recruitment.htm">My 
       group is<span class="STYLE26"> recruiting </span>tenure-track 
       faculties</a> and PostDocs (<a href="https://zhouchenlin.github.io/Academic.htm">academic</a> 
@@ -2599,7 +2599,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
       lab at Zhijiang LAB is also recruiting</a> Researchers and PostDocs. <a href="https://zhouchenlin.github.io/Recruitment%20at%20Samsung%20AI%20Lab.htm">Samsung 
       AI Lab is also recruiting</a> top-caliber researchers with strong 
       expertise in machine learning! </p></td>
-    <td width="175" rowspan="3"><img src="index_files/Opt_Cover.png" width="167" height="228"></td></tr>
+    <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
       <p class="WordSection1">2. Five papers accepted to AAAI 2020! I was invited to be area chairs of CVPR 2020, ICML 2020 and IJCAI 2020!</p></td>
@@ -2612,7 +2612,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
   <tr align="left">
     <td height="73">
       <p class="WordSection1">4. My new book: <a href="https|//www.springer.com/gp/book/9789811529092">Accelerated Optimization in Machine Learning: First-Order Algorithms</a> will be published by Spriner soon! Michael Jordan wrote one of the forewords!</p></td>
-    <td width="175" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
+    <td width="164" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
   </tr>
   <tr align="left">
     <td height="70">
