--- a/index.html
+++ b/index.html
@@ -2611,7 +2611,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
     </tr>
   <tr align="left">
     <td height="73">
-      <p class="WordSection1">4. My new book: <a href="https|//www.springer.com/gp/book/9789811529092">Accelerated Optimization in Machine Learning: First-Order Algorithms</a> will be published by Spriner soon! Michael Jordan wrote one of the forewords!</p></td>
+      <p class="WordSection1">4. My new book: <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization in Machine Learning: First-Order Algorithms</a> will be published by Spriner soon! Michael Jordan wrote one of the forewords!</p></td>
     <td width="164" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
   </tr>
   <tr align="left">
