--- a/index.html
+++ b/index.html
@@ -4578,6 +4578,6 @@ University (Sept. 20, 2016). </span></p>
 was last updated on Jan. 13, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
-<img src="./index_files/counter.php" border="0" alt="Web Counters"></a>
+<img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
 <br><a href="https://www.easycounter.com/">Web Site Hit Counters</a>
 </span></p><form id="default" runat="server"></form></div></o:shapedefaults></msr:headertags></body></html>
